# pinecone

./: .envrc.sample  .gitignore  README.md  flake.nix  pinecone.cabal
.cursor/rules/: 01-project-overview.mdc  02-api-structure.mdc  03-usage-examples.mdc  04-module-overview.mdc  05-development-guidelines.mdc
pinecone-example/: Main.hs
src/: Pinecone.hs
src/Pinecone/: Backups.hs  Embed.hs  Filter.hs  Imports.hs  Indexes.hs  Metadata.hs  Prelude.hs  Rerank.hs  Search.hs  Vectors.hs
tasty/: Main.hs
