cabal-version:      2.4
name:               pinecone
version:            1.0.0
synopsis:           Servant bindings to Pinecone
description:        This package provides comprehensive and type-safe bindings
                    to Pinecone, providing both a Servant interface and
                    non-Servant interface for convenience.
license:            BSD-3-Clause
license-file:       LICENSE
author:             Gabriella Gonzalez
maintainer:         GenuineGabriella@gmail.com
copyright:          2025 Mercury Technologies
build-type:         Simple
extra-doc-files:    CHANGELOG.md README.md

library
    default-language:   Haskell2010
    build-depends:      base >= 4.15.0.0 && < 5
                      , aeson
                      , containers
                      , http-api-data
                      , http-client
                      , http-client-tls
                      , scientific
                      , servant
                      , servant-client
                      , servant-client-core
                      , text
                      , time
                      , vector
    exposed-modules:    Pinecone
                      , Pinecone.Imports
                      , Pinecone.Indexes
                      , Pinecone.Metadata
                      , Pinecone.Search
                      , Pinecone.Vectors
    other-modules:      Pinecone.Prelude
    default-extensions: BlockArguments
                      , DataKinds
                      , DeriveGeneric
                      , DeriveAnyClass
                      , DerivingStrategies
                      , DuplicateRecordFields
                      , GeneralizedNewtypeDeriving
                      , OverloadedLists
                      , OverloadedStrings
                      , RecordWildCards
                      , TypeApplications
                      , TypeOperators
    hs-source-dirs:     src
    ghc-options:        -Wall -Wno-missing-fields

test-suite tasty
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   tasty
    main-is:          Main.hs
    build-depends:    base
                    , pinecone
                    , tasty
                    , tasty-hunit
                    , text
                    , vector
    ghc-options:      -Wall
